<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"></group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/menu_home" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/function_divider">
        <item
            android:id="@+id/nav_real_time_map"
            android:icon="@drawable/ic_icon_airquality"
            android:title="@string/menu_air_quality_map" />
        <item
            android:id="@+id/nav_heart"
            android:icon="@drawable/ic_icon_health"
            android:title="@string/menu_heart_rate" />
        <item
            android:id="@+id/nav_sensorManagements"
            android:icon="@drawable/ic_icon_sensormanagement"
            android:title="@string/menu_sensor_managements" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/user_manage_divider">
        <item
            android:id="@+id/nav_passwordChange"
            android:icon="@drawable/ic_icon_changepassword"
            android:title="@string/menu_password_change" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_icon_singout"
            android:title="@string/menu_sign_out" />
    </group>

</menu>
