<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/real_time_dashboard_spinner"/>

    <LinearLayout
        style="@style/real_time_dashboard_linear_layout">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_co"/>
        <ProgressBar
            style="@style/real_time_dashboard_progress"
            android:id="@+id/co_progress"/>
        <TextView
            style="@style/real_time_dashboard_text_view_value"
            android:id="@+id/co_value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/real_time_dashboard_linear_layout">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_so2"/>
        <ProgressBar
            android:id="@+id/so2_progress"
            style="@style/real_time_dashboard_progress"/>
        <TextView
            style="@style/real_time_dashboard_text_view_value"
            android:id="@+id/so2_value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/real_time_dashboard_linear_layout">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_o3"/>
        <ProgressBar
            style="@style/real_time_dashboard_progress"
            android:id="@+id/o3_progress"/>
        <TextView
            style="@style/real_time_dashboard_text_view_value"
            android:id="@+id/o3_value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/real_time_dashboard_linear_layout">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_no2"/>
        <ProgressBar
            style="@style/real_time_dashboard_progress"
            android:id="@+id/no2_progress"/>
        <TextView
            style="@style/real_time_dashboard_text_view_value"
            android:id="@+id/no2_value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/real_time_dashboard_linear_layout">
        <TextView
            style="@style/real_time_dashboard_text_view"
            android:text="@string/air_quality_pm25"/>
        <ProgressBar
            android:id="@+id/pm_progress"
            style="@style/real_time_dashboard_progress"/>
        <TextView
            style="@style/real_time_dashboard_text_view_value"
            android:id="@+id/pm_value"/>
    </LinearLayout>

</LinearLayout>